kubernetes/apps/default/nextcloud/middleware-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-redirect-1
  namespace: default
  labels:
    app.kubernetes.io/name: nextcloud
spec:
  redirectRegex:
    permanent: true
    regex: "https://(.*)/.well-known/(card|cal)dav"
    replacement: "https://$1/remote.php/dav/"

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-redirect-2
  namespace: default
  labels:
    app.kubernetes.io/name: nextcloud
spec:
  redirectRegex:
    permanent: true
    regex: "^https?://([^/]*)/.well-known/(webfinger|nodeinfo)$"
    replacement: "https://$1/index.php/.well-known/$2"
