kubernetes/apps/default/nextcloud/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name nextcloud
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`cloud.${SECRET_DOMAIN}`)
      middlewares:
        - name: headers
          namespace: networking
        - name: nextcloud-redirect-1
          namespace: default
        - name: nextcloud-redirect-2
          namespace: default
        # - name: authelia
        #   namespace: default
      services:
        - name: *name
          port: 8080
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME}-prod-tls
